--- a/appfront/src/components/appfront/index.css
+++ b/appfront/src/components/appfront/index.css
@@ -16160,3 +16160,60 @@ text-transform: uppercase;
   font-size: 18px;
   vertical-align: middle;
 }
+.buttonS {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 19px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  
+  .button1S {
+    background-color: #4CAF50; 
+    color: black; 
+    border: 4px solid black;
+  }
+  
+  .button1S:hover {
+    background-color: #33FF62;
+    color: white;
+  }
+  
+  .button2S {
+    background-color: #336BFF; 
+    color: black; 
+    border: 4px solid black;
+  }
+  
+  .button2S:hover {
+    background-color: #7399FF;
+    color: white;
+  }
+.centrandoeldiv{
+    display: flex;
+    justify-content: center;
+}  
+.titulosbonis{
+    padding: 2px;
+  /* display: none; */
+  color: black;
+  font-size: 30px;
+  position: relative;
+  top: -20px;
+  right: -30px;
+  width: 150px;
+  text-align: center;
+  /* background-color: #fef4c5; */
+  /* border: 1px solid #d4b943; */
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -ms-border-radius: 2px;
+  border-radius: 2px;
+}
